--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -6,10 +6,12 @@
 }
 
 .menu{
+    z-index: 1;
     display: none;
     background-color: transparent;
     border-style: none;
     border-radius: 0.2rem;
+
     svg{
         fill: rgb(80, 71, 71);
         transition: all ease 0.5s;
