--- a/src/components/CardWidget/CardWidget.css
+++ b/src/components/CardWidget/CardWidget.css
@@ -1,10 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-.contenedorCard{
+
+.cardWidget{
     /* background-color: aquamarine; */
     position: relative;
     display: flex;
@@ -17,4 +13,7 @@
         padding-top:0.2rem ;        
     }
 
+ 
+
 }
+
