--- a/src/components/Categorias.css
+++ b/src/components/Categorias.css
@@ -1,17 +1,31 @@
 
-.categorias{
-    /* border: 1px solid blue; */
-    display: inline;
-    background-color: antiquewhite;
-    grid-column: 1/4;
-    padding: 0.3em;
-    font-family:Futura,Helvetica,Arial,sans-serif;
-    ol{
-        display: flex;
-        justify-content: space-evenly;
-    }
+.contenedorCategoria{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    
     li{
-        list-style: none;
+        list-style: none;   
+        
     }
+}
 
+.desplegableMujer{
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    div{
+        border: solid 1px red;
+        flex-grow: 1;
+
+        li{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    }
 }
