--- a/src/components/SearchWidget/SearchWidget.css
+++ b/src/components/SearchWidget/SearchWidget.css
@@ -1,14 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .contenedorSearch{
     display: flex;
     
     svg{
-        width:clamp(1.1rem,1vw,1.5rem);
+        width: 1.2rem;
     }
 
     input{
